<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.SubmitFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/project_submission"
            android:textColor="@color/colorYellow"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/divider_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/firstNameEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/lastNameEdit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView2" />

        <EditText
            android:id="@+id/lastNameEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@id/firstNameEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/firstNameEdit"
            app:layout_constraintTop_toTopOf="@id/firstNameEdit" />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@id/lastNameEdit"
            app:layout_constraintStart_toStartOf="@id/firstNameEdit"
            app:layout_constraintTop_toBottomOf="@id/firstNameEdit" />

        <EditText
            android:id="@+id/projectLinkEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/project_on_github_link"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@id/emailEdit"
            app:layout_constraintStart_toStartOf="@id/emailEdit"
            app:layout_constraintTop_toBottomOf="@id/emailEdit" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:background="@drawable/button_background"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/projectLinkEdit"
            app:layout_constraintStart_toStartOf="@id/projectLinkEdit"
            app:layout_constraintTop_toBottomOf="@id/projectLinkEdit" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="submitButton, firstNameEdit, lastNameEdit, emailEdit, projectLinkEdit"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>